--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1c0e4739e9e43e2afe1010f23bb1a9c",
+       "model_id": "97bc55eb59fb47ab8ffd03062057a5a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85915a721ab84122b4e0bf589a063c1f",
+       "model_id": "38bc8db7daed45c088eb11803d645f88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65cf30f1888e493bbf1cbac4d9eacbf8",
+       "model_id": "35c3c5742b2945f0970ddf132e913a03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5f14f823739473a8a2a0f13d2d912cd",
+       "model_id": "f75aa39db191450894647e363a04d188",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +124,7 @@
     "\n",
     "#Size of figures\n",
     "dpi_laptop = 50; dpi_cadarache = 65; dpi_home = 100\n",
-    "dpi_custom = dpi_home\n",
+    "dpi_custom = dpi_laptop\n",
     "\n",
     "## Set colors\n",
     "import seaborn as sns\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -186,11 +186,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(649, 512)\n",
-      "(649, 512)\n",
-      "(649,)\n",
-      "dict_keys(['As', 'Er', 'Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0', 'Isq', 'P', 'Phi00', 'Pperp', 'Ptransfert', 'Ptransfert_approx', 'Ptransfert_vD', 'Ptransfert_vE', 'RSphi', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'RSpol', 'RSpol_vD', 'RSpol_vE', 'RSpol_vEn0', 'T', 'VP', 'VT', 'Zs', 'dErdr', 'dErdt', 'dIdr', 'dIsqdr', 'dRSphi_vDdr', 'dRSphi_vEdr', 'dRSphidr', 'dRSpol_vDdr', 'dRSpol_vEdr', 'dRSpoldr', 'dTdr', 'dVPdr', 'dVTdr', 'dndr', 'dndt', 'eps', 'n', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'time', 'vorticity', 'title', 'c', 'ls', 'c2', 'RSdia', 'RSpol_vE_from3D', 'RSpol_tot_from3D', 'dRSpol_tot_from3Ddr'])\n",
-      "Memory usage of all_sim = 400.20983123779297 MB\n"
+      "dict_keys(['As', 'Er', 'Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0', 'Isq', 'P', 'Phi00', 'Pperp', 'Ptransfert', 'Ptransfert_approx', 'Ptransfert_vD', 'Ptransfert_vE', 'RSphi', 'RSphi_vD', 'RSphi_vE', 'RSphi_vEn0', 'RSpol', 'RSpol_vD', 'RSpol_vE', 'RSpol_vEn0', 'T', 'VP', 'VT', 'Zs', 'dErdr', 'dErdt', 'dIdr', 'dIsqdr', 'dRSphi_vDdr', 'dRSphi_vEdr', 'dRSphidr', 'dRSpol_vDdr', 'dRSpol_vEdr', 'dRSpoldr', 'dTdr', 'dVPdr', 'dVTdr', 'dndr', 'dndt', 'eps', 'n', 'nu_i', 'nustar', 'q', 'rg', 'rho', 'time', 'vorticity', 'title', 'c', 'ls', 'c2'])\n",
+      "Memory usage of all_sim = 293.02711486816406 MB\n"
      ]
     }
    ],
@@ -369,7 +366,7 @@
     "    - [Profil radial des termes dans l'équation d'évolution de l'énergie](#en_cours_rprof_energy_evo_terms)\n",
     "    - [Conservation de la vorticité généralisée](#en_cours_cons_vorticity)\n",
     "    - [Conservation de la vorticité généralisée - Corrigé](#en_cours_cons_vorticity_corrected)\n",
-    "    - [Conservation de la vorticité généralisée - Autre notation](#en_cours_cons_vorticity_different_notation)\n",
+    "    - [Estimation de l'impact de l'approximation de Pade](#en_cours_assessment_pade_approx)\n",
     "    - [Conservation de la vorticité (avec tenseur diamagnétique)](#en_cours_cons_vorticity_withdia)\n",
     "    - [Estimation de $\\nu_\\theta$](#en_cours_estimation_nutheta)\n",
     "    - [Profils amplitude GAMs et ZFs](#en_cours_profile_amplitude_GAMs_ZFs)\n",
@@ -400,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "280898b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7dd461a87f44449a38ef4a1928b653f",
+       "model_id": "1cd3da74cffc4d10a7ef7461fd844fa0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -421,12 +418,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef726b5bb9ec43c2accb0fc9f45014fb",
+       "model_id": "82a9ba903d5e479ab89f4a912b4ff9a7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=1, continuous_update=False, description='N', min=1), Text(value='Er', co…"
+       "interactive(children=(IntSlider(value=1, continuous_update=False, description='N', min=1), Text(value='Jr_vE',…"
       ]
      },
      "metadata": {},
@@ -438,7 +435,7 @@
        "<function __main__.update_plot(N, param, param2, float_range_time, select_sim, dpi_adjust)>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,20 +515,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "8fdc5558",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'plt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-2e1ff1a8204f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'all'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mclear_output\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0max_rprof\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_subplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m111\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8157cd375cdf43a1a4bea6c3cf4c8418",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d5fe4eccb5b044a6adeba7b5f5a9e007",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=1, continuous_update=False, description='N', min=1), IntSlider(value=50,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(N, dpi_adjust, param, select_sim, float_range_rho, it_play, time_slider, bool_fixed_y_range, coef_ylim)>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -582,6 +606,7 @@
     "    ax_rprof.legend()\n",
     "\n",
     "    ax_rprof.set_xlim([rhomin_avg,rhomax_avg])\n",
+    "    ax_rprof.set_ylim(-5e-6,5e-6)\n",
     "\n",
     "    ## Fix y range if bool_fixed_y_range is True\n",
     "    if bool_fixed_y_range:\n",
@@ -1402,10 +1427,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bc1fa7bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b5fc322ad6248bea214d2dfa0c7c6ce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=100, continuous_update=False, description='dpi_adjust', max=200, min=30)…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.update_plot(dpi_adjust, float_time, float_range_rho, select_sim, vorticity_bool, current_bool, density_bool, same_y_range)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.close('all')\n",
     "\n",
@@ -1497,19 +1547,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "c2a25821",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4549abdd16f34865a77bad5bda68ca5b",
+       "model_id": "5f0c6207e11943ca8c65c2126f7808a2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=100, continuous_update=False, description='dpi_adjust', max=200, min=30)…"
+       "interactive(children=(IntSlider(value=50, continuous_update=False, description='dpi_adjust', max=200, min=30),…"
       ]
      },
      "metadata": {},
@@ -1521,7 +1571,7 @@
        "<function __main__.update_plot(dpi_adjust, float_time, float_range_rho, select_sim, vorticity_bool, vorticity_bool_corrected, current_bool, density_bool, same_y_range)>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,8 +1613,8 @@
     "        dt_vorticity = np.gradient(q['vorticity'],q['time'],axis=0)\n",
     "        dt_vorticity_corrected = np.gradient(q['vorticity_corrected'],q['time'],axis=0)\n",
     "        div_Jr       = np.gradient(q['Jr'],q['rg'],axis=1)\n",
-    "        #div_Jr_int   = np.cumsum(div_Jr[:,irhomin:irhomax],axis=1)\n",
-    "        #dt_vorticity_corrected_int = np.cumsum(dt_vorticity_corrected[:,irhomin:irhomax],axis=1)\n",
+    "        div_Jr_int   = np.cumsum(div_Jr[:,irhomin:irhomax],axis=1)\n",
+    "        dt_vorticity_corrected_int = np.cumsum(dt_vorticity_corrected[:,irhomin:irhomax],axis=1)\n",
     "\n",
     "        ax_rprof.set_title(q['title'] + ' - Vorticity')\n",
     "        if vorticity_bool:ax_rprof.plot(q['rho'][irhomin:irhomax], dt_vorticity[itscan,irhomin:irhomax],c='b',label=r'$\\partial_t \\langle \\Omega_{old} \\rangle$')\n",
@@ -1583,9 +1633,9 @@
     "        ax_rprof2.set_title(q['title'] + r' - Integrated vorticity')\n",
     "        if vorticity_bool:ax_rprof2.plot(q['rho'][irhomin:irhomax], dt_P[itscan,irhomin:irhomax],c='b',label=r'$\\partial_t \\langle -m ( \\frac{n}{B} \\partial_r \\phi + \\frac{m}{2eB^2} \\partial_r P_\\perp ) \\rangle$')\n",
     "        if vorticity_bool_corrected:ax_rprof2.plot(q['rho'][irhomin:irhomax], dt_P_corrected[itscan,irhomin:irhomax],c='g',label=r'$-m \\partial_t \\left( \\frac{n(t=0)}{B_0} \\partial_r \\phi_{00} + \\frac{m}{2eB_0^2} \\partial_r \\langle P_\\perp \\rangle_{FS} \\right)$')\n",
-    "        #if vorticity_bool_corrected:ax_rprof2.plot(q['rho'][irhomin:irhomax], dt_vorticity_corrected_int[itscan,:],c='grey',label=r'$-m \\partial_t \\left( \\frac{n(t=0)}{B_0} \\partial_r \\phi_{00} + \\frac{m}{2eB_0^2} \\partial_r \\langle P_\\perp \\rangle_{FS} \\right)$')\n",
+    "        if vorticity_bool_corrected:ax_rprof2.plot(q['rho'][irhomin:irhomax], dt_vorticity_corrected_int[itscan,:],c='grey',label=r'$-m \\partial_t \\left( \\frac{n(t=0)}{B_0} \\partial_r \\phi_{00} + \\frac{m}{2eB_0^2} \\partial_r \\langle P_\\perp \\rangle_{FS} \\right)$')\n",
     "        if current_bool:ax_rprof2.plot(q['rho'][irhomin:irhomax], -q['Jr'][itscan,irhomin:irhomax],c='r',label=r'-$e \\langle \\Gamma_r \\rangle $')\n",
-    "        #if current_bool:ax_rprof2.plot(q['rho'][irhomin:irhomax], -div_Jr_int[itscan,:],c='pink',label=r'-$e \\langle \\Gamma_r \\rangle $')\n",
+    "        if current_bool:ax_rprof2.plot(q['rho'][irhomin:irhomax], -div_Jr_int[itscan,:],c='pink',label=r'-$e \\langle \\Gamma_r \\rangle $')\n",
     "        if density_bool:ax_rprof2.plot(q['rho'][irhomin:irhomax], int_dndt[itscan,:],c='purple',label=r'$\\int_{r_0}^r \\partial_t n$')\n",
     "        if same_y_range:ax_rprof2.set_ylim(-1e-5,1e-5)\n",
     "\n",
@@ -1620,24 +1670,22 @@
    "id": "5319d217",
    "metadata": {},
    "source": [
-    "<a id='en_cours_cons_vorticity_different_notation'></a>\n",
-    "## <font color='coral'>**Travail en cours**</font> - Conservation de la vorticité généralisée - Autre expression[▲](#sommaire)\n",
+    "<a id='en_cours_assessment_pade_approx'></a>\n",
+    "## <font color='coral'>**Travail en cours**</font> - Estimation de l'impact de l'approximation de Pade [▲](#sommaire)\n",
     "\n",
-    "On peut également écrire l'équation de vorticité intégrée comme\n",
-    "\n",
-    "$\\partial_t(\\langle n_G \\rangle_{FS} + \\langle \\nabla_\\perp P_\\perp \\rangle_{FS}) + \\langle J_r \\rangle_{FS} = 0$"
+    "On compare $ \\partial_t \\langle n \\rangle_{FS}$ et  $- \\partial_t \\left( \\frac{m n_0}{B_0} \\langle \\phi \\rangle_{FS} +  \\frac{m}{2 e B_0^2} \\langle P_\\perp \\rangle_{FS} \\right) $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "cf06c1d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3a7ba1b0ef34493ad866d0f1472523b",
+       "model_id": "701b2b1627fc4571a5d58e57ef93205b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1651,10 +1699,10 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.update_plot(dpi_adjust, float_time, float_range_rho, select_sim, same_y_range)>"
+       "<function __main__.update_plot(dpi_adjust, float_time, float_range_rho, select_sim, same_y_range, bool_abs)>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,7 +1710,7 @@
    "source": [
     "plt.close('all')\n",
     "\n",
-    "def update_plot(dpi_adjust,float_time,float_range_rho,select_sim,same_y_range):\n",
+    "def update_plot(dpi_adjust,float_time,float_range_rho,select_sim,same_y_range,bool_abs):\n",
     "    \n",
     "    plt.close('all')\n",
     "    clear_output\n",
@@ -1681,21 +1729,31 @@
     "    \n",
     "    for iq,q in enumerate(q_ar):\n",
     "\n",
-    "        ax_rprof = fig.add_subplot(len(q_ar),1,iq+1)\n",
     "\n",
     "        irhomin, irhomax = np.searchsorted(q['rho'],[rhomin,rhomax])\n",
     "        \n",
     "        itscan = np.searchsorted(q['time'],tscan)\n",
     "\n",
-    "        dt_vorticity_int = np.gradient(q['n'] + q['divPperp'], q['time'],axis=0)\n",
-    "        #dt_vorticity_int = np.gradient( q['P'] , q['time'],axis=0)\n",
-    "        current = q['Jr']\n",
+    "        dt_n = np.gradient(q['n'], q['time'],axis=0)\n",
     "\n",
-    "        ax_rprof.set_title(q['title'] + ' - Vorticity')\n",
-    "        ax_rprof.plot(q['rho'][irhomin:irhomax], -current[itscan,irhomin:irhomax],c='b',label=r'$\\langle J_r \\rangle$')\n",
-    "        ax_rprof.plot(q['rho'][irhomin:irhomax], dt_vorticity_int[itscan,irhomin:irhomax],c='g',label=r'$\\partial_t \\langle \\Omega \\rangle$')\n",
+    "        B0 = 1\n",
+    "        P_corrected = -q['As'] *( (q['n'][0,:] / B0) * (np.gradient(q['Phi00'], q['rg'], axis=1)) + (2*q['Zs']*B0**2)**(-1) * np.gradient(q['Pperp'], q['rg'], axis=1) )\n",
+    "        vorticity_corrected = np.gradient(q['P_corrected'],q['rg'],axis=1)\n",
+    "        dt_vorticity = np.gradient(q['vorticity'],q['time'],axis=0)\n",
+    "\n",
+    "\n",
+    "        ax_rprof = fig.add_subplot(len(q_ar),2,2*iq+1)\n",
+    "        ax_rprof.set_title(q['title'])\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], dt_n[itscan,irhomin:irhomax],c='b',label=r'$\\partial_t \\langle n \\rangle$')\n",
+    "        ax_rprof.plot(q['rho'][irhomin:irhomax], dt_vorticity[itscan,irhomin:irhomax],c='g',label=r'$\\partial_t \\langle \\Omega \\rangle$')\n",
     "\n",
     "        if same_y_range:ax_rprof.set_ylim(-4e-6,4e-6)\n",
+    "\n",
+    "        ax_rprof2 = fig.add_subplot(len(q_ar),2,2*iq+2)\n",
+    "        ax_rprof2.set_title(q['title'] + ' - Absolute error')\n",
+    "        if bool_abs:ax_rprof2.plot(q['rho'][irhomin:irhomax], np.abs((dt_n-dt_vorticity)[itscan,irhomin:irhomax]),c='r')\n",
+    "        else:ax_rprof2.plot(q['rho'][irhomin:irhomax], (dt_n-dt_vorticity)[itscan,irhomin:irhomax],c='r')\n",
+    "        ax_rprof2.axhline(y=0,c='k',ls='--')\n",
     "\n",
     "        for axes in [ax_rprof]:\n",
     "            axes.set_xlabel(r'$r/a$')\n",
@@ -1714,6 +1772,7 @@
     "         float_time     = float_time_slider,\n",
     "         float_range_rho  = float_range_rho_slider,\n",
     "         same_y_range   = widgets.Checkbox(value=True,description='Same y range'),\n",
+    "         bool_abs   = widgets.Checkbox(value=False,description='Absolute error'),\n",
     "         **custom_widgets\n",
     "        )"
    ]
